
 * Really Good code, could improve with main() and get_submit() tests

2014-01-31  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the error page
 * test_server.py: Added the test for the error page

2014-02-04  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the recv() functionality
 * test_server.py: Altered the tests to work with the templates

2014-02-06  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the multipart post stuff
 * test_server.py: Altered the tests to work with the new stuff

2014-02-09  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Removed from hw5
 * test_server.py: Removed from hw5
 * ref-server.py: Added for hw5
 * app.py: Started on for hw5
 * test_app.py: Started on for hw5

2014-02-11  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * app.py: Added the encoding line for template rendering
 * added the s2.html template for posts

2014-02-12  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * app.py: Fixed the post part

2014-02-12  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added it back with hw5 changes and socketmodule
 * test_server.py: Added it back with main() test

2014-02-20  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * app.py: Added the text file and image functionality
 * file: Added the file folder with some test files
 * images: Added the images folder with some test files

2014-02-21  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the WSGI validation
 * test_app.py: Added tests for the new text file and image stuff

2014-02-28  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * imageapp: Added the imageapp directory
 * app.py: Made the files list sorted
 * un-qx-server.py: Fixed it to test cookies

2014-03-15  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * ref-server.py: Removed
 * twill-tests: Added all twill tests
 * images: Added 2 more images to test the project
 * Project: I did project 5 and made the /images page thumbnails
